# multAI-back

./: .dockerignore  .env.example  .env.staging.example  .gitignore  Dockerfile  README.md  alembic.ini  db.txt  docker-compose.staging.local.yml  docker-compose.staging.yml  docker-compose.yml  ersLenovoOneDriveDesktopMultiAImultAI-back.venvScriptsActivate.ps1  makefile  pyproject.toml  test_facedetection.py  test_insightface.py
.github/workflows/: ci.yml  docker-publish.yml
app/: container.py  main.py
app/core/: config.py  constant.py  exceptions.py  image_validation.py  logger.py  securite.py  token_blacklist.py  utils.py
app/infra/: database.py  email.py  firebase.py  google_drive.py  invalid_tokens.py  minio.py  nats.py  notification_queue.py  redis.py
app/router/: event.py  notifications.py
app/schema/: notification.py
app/service/: audit.py  auth.py  batch_face_embedding.py  batch_face_embedding_queue.py  data_processor.py  device.py  enrollement.py  event.py  face_embedding.py  face_match.py  filters.py  notification.py  photo_approval.py  session.py  single_face_match.py  staff_drive.py  staff_notifications.py  staff_session.py  staff_user.py  staged_upload_storage.py  stats.py  test_face_embedding.py  upload_requests.py  user_match.py  user_notification.py  user_photo.py  users.py
app/worker/: batch_face_embeddings.py  notification.py  single_face_match.py  storage_cleaner.py
db/: __init__.py  sqlc.yaml
db/queries/: audit.sql  devices.sql  eventParticipant.sql  events.sql  joinEv.sql  notifications.sql  photo_approvals.sql  photo_faces.sql  photos.sql  processing_jobs.sql  session.sql  staffSessions.sql  staff_drive_connections.sql  staff_notifications.sql  stats.sql  stuff_user.sql  upload_request_groups.sql  upload_request_photos.sql  upload_requests.sql  user.sql  user_faces.sql
docs/: RUN_MODES.md
docs/problem-fixes/: 001-mobile-auth-required-field-validation.md  002-mobile-auth-ambiguous-register-login-intent.md  003-mobile-auth-email-length-bound.md  004-mobile-auth-concurrent-signup-race.md  005-mobile-auth-bcrypt-truncation.md  006-mobile-auth-password-complexity-policy.md  007-mobile-auth-rate-limiting-bruteforce.md  README.md
migrations/: env.py  helper.py
migrations/versions/: 042883327797_create_photo_faces_table.py  0952572fe9b4_create_photos_table.py  127f362c99e9_create_upload_requests_table.py  1f6d3a37d12b_create_face_matches_table.py  2c8a676ecccf_add_physical_device_id.py  2d930ce4c68f_merge_all_heads.py  36c3d68f547f_create_notifications_table.py  3ebf22bc9118_create_events_table.py  42cad74be264_create_users_table.py  4538d2612939_create_user_devices.py  4c6c265d0d15_add_users_profile_fields.py  4dd6658b9f83_merge_heads.py  4ecce8f0b1bd_create_event_participants_table.py  55ed7d46c7d2_staff_sessions.py  5b6615c9ab1d_merge_heads.py  5d10bf2ace55_create_user_photos_table.py  5ead72a95638_merge_alembic_heads.py  78f200d4cec7_create_processing_jobs_table.py  87919323c62e_staff_user.py  8d3881f3954b_join_events.py  8e9b7a6c4d11_create_staff_drive_connections.py  989510311240_replace_staff_discord_with_password.py  9f1c3c6e9c1a_add_blocked_to_users.py  (+16 more)
mobile-quickstart/: .env.mobile.example  docker-compose.mobile.yml  readme.md  seed.py
scripts/: check_ai_results.py  check_scopes.py  clean_schema.py  generate_drive_url.py  list_drive.py  test_routes.py  trigger_import.py  trigger_photo_worker.py  trigger_upload_request.py
(+211 files in other folders)
