[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=46.0.5",
    "fastapi[standard]>=0.135.1",
    "miniopy-async>=1.23.4",
    "nats-py>=2.14.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "pyotp>=2.9.0",
    "redis>=7.2.1",
    "setuptools>=82.0.0",
]

[tool.ruff]
src = ["app", "migrations", "db"]  
line-length = 88
select = ["E", "F", "W", "C90"]   
ignore = ["E501"]                  
exclude = ["__pycache__", ".venv", ".git", "build", "dist", ".ruff_cache"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
follow_imports = "silent"
files = ["app", "db", "migrations"]