[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.5",
    "fastapi[standard]>=0.135.1",
    "greenlet>=3.3.2",
    "miniopy-async>=1.23.4",
    "nats-py>=2.14.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "pyotp>=2.9.0",
    "redis>=7.2.1",
    "setuptools>=82.0.0",
    "opencv-python-headless>=4.13.0.92",
    "numpy>=2.4.3",
    "insightface>=0.7.3",
    "onnxruntime>=1.24.4",
    "python-multipart>=0.0.22",
    "firebase-admin>=6.8.0",
    "pywebpush>=2.3.0",
    "opencv-python>=4.13.0.92",
    "filetype>=1.2.0",
    "pillow-heif>=1.3.0",
    "sqlalchemy>=2.0.47",
]

[tool.ruff]
src = ["app", "migrations", "db"]
line-length = 88
exclude = [
    "__pycache__",
    ".venv",
    ".git",
    "build",
    "dist",
    ".ruff_cache",
    "db/generated",
    "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
strict_optional = true
warn_unused_ignores = false
warn_redundant_casts = true
follow_imports = "silent"
files = ["app", "db", "migrations"]
exclude = [
    "db/generated",
    "tests",
    "scripts"
]
[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
    "types-passlib>=1.7.4",
]
[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "e2e: tests that require a running backend and infrastructure services",
]
